# vampire

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  action_sequence.h  bests.txt  check.h  collect_commits.sh  compare.ods  conanfile.txt  connector.h  console_connector.h  data.js  data_collector.js  final_magic.cpp  final_magic.h  gabor_magic.cpp  gabor_magic.h  i_magic.cpp  i_magic.h  index.html  magic_selector.h  main.cpp  mcts.cpp  mcts.h  models.h  parser.cpp  parser.h  platform_dep.h  rules.txt  runner.sh  score_data.js  script.js  search.cpp  search.h  simulator.cpp  simulator.h  socket_connector.h  solver.cpp  (+8 more)
.github/workflows/: batch.yml  config.yml  data_collector.yml  game.yml
batch_runner/: collector.js  index.js  package.json  splitter.js
cmake/: StaticAnalyzers.cmake
framework/: framework.cpp  framework.h  game_loader.cpp  game_loader.h  game_recorder.cpp  game_recorder.h  gui_element.cpp  gui_element.h  main.cpp  model_wrapper.h
github_batches/: test.json  v1.json  v1_600.json  v2_600.json  v2_mix.json  v2_v1_2xsemi_600.json  v2_v1_x2_600.json  v3_mix.json  v6_mix.json  v8_local.json
github_batches/2021-11-12-23-07-29/: settings.json  summary.csv
github_batches/2021-11-12-23-07-29/1_level1/: result.json
github_batches/2021-11-14-14-20-18/split/: 0.json
github_batches/2021-11-14-14-20-18/subbatch-0/: summary.csv
github_batches/2021-11-14-14-55-09/: summary.csv
github_batches/2021-11-14-14-55-09/split/: 0.json  1.json  10.json  12.json  16.json  4.json  5.json  7.json  9.json
github_batches/2021-11-14-14-55-09/subbatch-0/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-1/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-10/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-11/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-12/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-13/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-14/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-15/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-16/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-17/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-2/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-3/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-4/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-5/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-6/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-7/: summary.csv
github_batches/2021-11-14-14-55-09/subbatch-8/: settings.json  summary.csv
github_batches/2021-11-14-14-55-09/subbatch-9/: summary.csv
github_batches/2021-11-14-16-25-00/: summary.csv
github_batches/2021-11-14-16-25-00/split/: 0.json  1.json  10.json  11.json  12.json  13.json  15.json  17.json  3.json  5.json  8.json
github_batches/2021-11-14-16-25-00/subbatch-0/: summary.csv
github_batches/2021-11-14-16-25-00/subbatch-1/: summary.csv
github_batches/2021-11-14-16-25-00/subbatch-10/: summary.csv
github_batches/2021-11-14-19-23-13/: summary.csv
github_batches/2021-11-14-20-44-39/: summary.csv
github_batches/2021-11-14-21-57-53/: summary.csv
github_batches/2021-11-15-05-45-33/: summary.csv
github_batches/2021-11-15-07-32-13/: settings.json  summary.csv
github_batches/2021-11-15-23-05-58/: summary.csv
github_batches/2021-11-16-00-51-41/: summary.csv
github_batches/2021-11-16-07-41-09/: summary.csv
github_batches/2021-11-16-09-01-55/: settings.json  summary.csv
github_batches/2021-11-16-18-00-46/: summary.csv
github_batches/2021-11-16-19-58-10/: summary.csv
github_batches/2021-11-16-21-10-40/: summary.csv
github_batches/2021-11-16-22-14-53/: summary.csv
github_batches/2021-11-16-23-31-13/: summary.csv
github_batches/2021-11-17-00-54-57/: settings.json  summary.csv
github_batches/2021-11-17-07-15-02/: summary.csv
github_batches/2021-11-17-08-29-03/: summary.csv
github_batches/2021-11-17-09-46-28/: summary.csv
github_batches/2021-11-17-12-33-50/: summary.csv
github_batches/2021-11-17-13-42-00/: summary.csv
github_batches/2021-11-17-16-01-42/: summary.csv
github_batches/2021-11-17-17-20-27/: summary.csv
github_batches/2021-11-17-20-12-03/: summary.csv
github_batches/2021-11-17-21-33-18/: summary.csv
github_batches/2021-11-18-13-59-17/: settings.json  summary.csv
github_batches/2021-11-18-15-31-52/: settings.json  summary.csv
github_batches/2021-11-18-16-46-49/: summary.csv
github_batches/2021-11-18-18-00-57/: summary.csv
github_batches/2021-11-19-13-08-40/: summary.csv
github_batches/2021-11-19-13-46-44/: settings.json  summary.csv
github_batches/2021-11-19-14-08-38/: summary.csv
github_batches/2021-11-19-14-33-17/: summary.csv
github_batches/2021-11-19-14-51-00/: summary.csv
github_batches/2021-11-19-15-10-00/: summary.csv
github_batches/2021-11-21-06-36-36/: summary.csv
logs/: 10014  10042  10043  10057  10063  10072  10083  10113  10119  10142  10146  10156  10164  10167  10179  10198  10201  10206  10209  10250  10271  10279  10319  10354  10392  10402  10410  10419  10424  10433  10440  10461  10467  10481  10485  10490  10499  10504  10518  10532  (+747 more)
logs/logs/: 10031  10046  10050  10065  10076  10109  1579  1623  1636  1639  1664  1668  1670  1688  1750  1752  1753  1755  1802  1803  1811  1818  1820  1833  1853  1877  1879  1893  1922  1933  1942  2031  2084  2168  2184  2237  2238  2410  2412  2487  (+191 more)
old_boys/: index.js  package.json
server/: CMakeLists.txt  game.cpp  game.h  gui.cpp  gui.h  levels.cpp  levels.h  main.cpp  multi_server.cpp  multi_server.h  parser.cpp  parser.h  server.cpp  server.h
server/sockpp/: CMakeLists.txt
server/sockpp/src/: CMakeLists.txt
test/: main.cpp  test_action_sequence.cpp  test_final.cpp  test_mcts.cpp  test_search.cpp  test_simulator.cpp  test_solver.cpp  test_usual_magic.cpp  test_wolfee_magic.cpp
(+12937 files in other folders)
