add_subdirectory(sockpp)

add_executable(server
    game.cpp
    gui.cpp
    levels.cpp
    main.cpp
    multi_server.cpp
    parser.cpp
    server.cpp
    ../simulator.cpp
    ../parser.cpp
)
target_link_libraries(server
    project_options 
    sockpp-static 
    CONAN_PKG::fmt
    libimguibindings
    CONAN_PKG::imgui
)